fixed firefox toolbar issue, spacing on main page

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -184,8 +184,8 @@ figcaption {
 	// }
 
 	.toc-container {
-		margin-top: 20px;
-		margin-bottom: 20px;
+		margin-top: 5%;
+		margin-bottom: 5%;
 	}
 	h1 {font-size: 2.92rem;
 		margin-top: 4.5rem !important;}
@@ -213,7 +213,7 @@ figcaption {
 	}
 
 	#masthead-link {
-		padding-left: 5%;
+		padding-left: 6%;
 		align-self: flex-start;
 		p {
 		text-align: left;
@@ -472,6 +472,7 @@ figcaption {
 
 			.brand-logo {
 				left: 50%;
+				top: 7%;
 				transform: translateX(-50%);
 			}
 		}
@@ -479,5 +480,5 @@ figcaption {
 }
 
 #issue-title {
-	margin-left: 10%;
+	margin-left: 0.75rem;
 }
